Price & Ratings prediction

--- a/Models/Regression/InstallationsPrediction.ipynb
+++ b/Models/Regression/InstallationsPrediction.ipynb
@@ -61,12 +61,12 @@
        " ('Category', 'string'),\n",
        " ('Rating', 'float'),\n",
        " ('Rating Count', 'int'),\n",
-       " ('Installs', 'string'),\n",
+       " ('Installs', 'int'),\n",
        " ('Minimum Installs', 'int'),\n",
        " ('Maximum Installs', 'int'),\n",
        " ('Free', 'string'),\n",
        " ('Price', 'float'),\n",
-       " ('Size', 'string'),\n",
+       " ('Size', 'double'),\n",
        " ('Minimum Android', 'string'),\n",
        " ('Developer Id', 'string'),\n",
        " ('Developer Email', 'string'),\n",
@@ -100,11 +100,11 @@
        "[('Category', 'string'),\n",
        " ('Rating', 'float'),\n",
        " ('Rating Count', 'int'),\n",
-       " ('Installs', 'string'),\n",
+       " ('Installs', 'int'),\n",
        " ('Minimum Installs', 'int'),\n",
        " ('Maximum Installs', 'int'),\n",
        " ('Free', 'string'),\n",
-       " ('Size', 'string'),\n",
+       " ('Size', 'double'),\n",
        " ('Minimum Android', 'string'),\n",
        " ('Developer Id', 'string'),\n",
        " ('Developer Email', 'string'),\n",
@@ -170,37 +170,17 @@
     "# Reorder the list of column names so that the column to move is at the end\n",
     "new_column_order = column_names + [label]\n",
     "\n",
-    "# Use the new column order to select the columns in the DataFrame,\n",
-    "# and then add the column to move to the end using withColumn()\n",
     "df = df.select(*new_column_order).withColumn(label, col(label))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "critical-grenada",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Rating', 'Rating Count', 'Minimum Installs', 'Category', 'Ad Supported', 'In App Purchases', 'Editors Choice', 'Free', 'Size', 'Minimum Android', 'Developer Id', 'Developer Email', 'Released', 'Last Updated', 'Content Rating', 'Installs']\n"
-     ]
-    }
-   ],
-   "source": [
-    "required_features = df.columns[:-1]      #all except the target variable which is at the last index\n",
-    "print(required_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "outer-james",
    "metadata": {},
    "outputs": [],
    "source": [
+    "required_features = df.columns[:-1]      #all except the target variable which is at the last index\n",
     "vec_assembler = VectorAssembler(inputCols=required_features,outputCol='Features')\n",
     "vec_df = vec_assembler.setHandleInvalid(\"skip\").transform(df)"
    ]
@@ -216,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "polished-robin",
    "metadata": {},
    "outputs": [],
@@ -230,13 +210,21 @@
    "id": "stupid-cocktail",
    "metadata": {},
    "source": [
-    "# Model Building\n",
-    "## Linear Regression"
+    "# Linear Regression"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d38ab88e",
+   "metadata": {},
+   "source": [
+    "### Model Building"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "active-stephen",
    "metadata": {},
    "outputs": [],
@@ -246,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "atlantic-lesbian",
    "metadata": {},
    "outputs": [
@@ -254,38 +242,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 2689.996063\n",
-      "r2: 0.791566\n"
-     ]
-    }
-   ],
-   "source": [
-    "lr_model = lr.fit(train_df)\n",
-    "\n",
-    "#just some training metrics\n",
-    "trainingSummary = lr_model.summary\n",
-    "print(\"RMSE: %f\" % trainingSummary.rootMeanSquaredError)\n",
-    "print(\"r2: %f\" % trainingSummary.r2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "confidential-wilderness",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "RMSE on training data: 2583.738929\n",
+      "r2 on training data: 0.790996\n",
       "+--------------------+----------------+------------------+\n",
       "|            Features|Maximum Installs|        prediction|\n",
       "+--------------------+----------------+------------------+\n",
-      "|(16,[0,1,2,3,4,8,...|             288| 520.1537656829215|\n",
-      "|(16,[0,1,2,3,4,8,...|             476| 571.6457492590023|\n",
-      "|(16,[0,1,2,3,4,8,...|             208| 533.3656928848467|\n",
-      "|(16,[0,1,2,3,4,8,...|             472|505.80906905628296|\n",
-      "|(16,[0,1,2,3,4,8,...|           11555| 18383.56046752056|\n",
+      "|(16,[0,1,2,3,4,5,...|            3803|1684.8043656810792|\n",
+      "|(16,[0,1,2,3,4,5,...|            2521|1826.6284396296637|\n",
+      "|(16,[0,1,2,3,4,5,...|           24325| 17728.08211604411|\n",
+      "|(16,[0,1,2,3,4,5,...|            1407|1728.9830567173394|\n",
+      "|(16,[0,1,2,3,4,5,...|            4126| 1535.061952697402|\n",
       "+--------------------+----------------+------------------+\n",
       "only showing top 5 rows\n",
       "\n"
@@ -293,6 +259,11 @@
     }
    ],
    "source": [
+    "lr_model = lr.fit(train_df)\n",
+    "\n",
+    "trainingSummary = lr_model.summary\n",
+    "print(\"RMSE on training data: %f\" % trainingSummary.rootMeanSquaredError)\n",
+    "print(\"r2 on training data: %f\" % trainingSummary.r2)\n",
     "y_pred = lr_model.transform(test_df)\n",
     "y_pred.show(5)"
    ]
@@ -303,12 +274,12 @@
    "id": "2bcc55d9",
    "metadata": {},
    "source": [
-    "## Model Evaluation"
+    "### Model Evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "continuing-george",
    "metadata": {
     "collapsed": true,
@@ -321,7 +292,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R Squared (R2) on test data = 0.792117\n"
+      "Root Mean Squared Error (RMSE) on test data = 2585.47\n",
+      "r2 on test data = 0.789558\n"
      ]
     }
    ],
@@ -329,26 +301,10 @@
     "from pyspark.ml.evaluation import RegressionEvaluator\n",
     "lr_evaluator = RegressionEvaluator(predictionCol=\"prediction\", \\\n",
     "                 labelCol=\"Maximum Installs\",metricName=\"r2\")\n",
-    "print(\"R Squared (R2) on test data = %g\" % lr_evaluator.evaluate(y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "69c4cb15",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Root Mean Squared Error (RMSE) on test data = 2690.87\n"
-     ]
-    }
-   ],
-   "source": [
+    "        \n",
     "test_result = lr_model.evaluate(test_df)\n",
-    "print(\"Root Mean Squared Error (RMSE) on test data = %g\" % test_result.rootMeanSquaredError)"
+    "print(\"Root Mean Squared Error (RMSE) on test data = %g\" % test_result.rootMeanSquaredError)\n",
+    "print(\"r2 on test data = %g\" % lr_evaluator.evaluate(y_pred))"
    ]
   }
  ],
