--- a/Models/Regression/InstallationsPrediction.ipynb
+++ b/Models/Regression/InstallationsPrediction.ipynb
@@ -214,97 +214,29 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "d38ab88e",
-   "metadata": {},
-   "source": [
-    "### Model Building"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "active-stephen",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "lr = LinearRegression(featuresCol='Features',labelCol='Maximum Installs', )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "atlantic-lesbian",
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE on training data: 2583.738929\n",
-      "r2 on training data: 0.790996\n",
-      "+--------------------+----------------+------------------+\n",
-      "|            Features|Maximum Installs|        prediction|\n",
-      "+--------------------+----------------+------------------+\n",
-      "|(16,[0,1,2,3,4,5,...|            3803|1684.8043656810792|\n",
-      "|(16,[0,1,2,3,4,5,...|            2521|1826.6284396296637|\n",
-      "|(16,[0,1,2,3,4,5,...|           24325| 17728.08211604411|\n",
-      "|(16,[0,1,2,3,4,5,...|            1407|1728.9830567173394|\n",
-      "|(16,[0,1,2,3,4,5,...|            4126| 1535.061952697402|\n",
-      "+--------------------+----------------+------------------+\n",
-      "only showing top 5 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "lr_model = lr.fit(train_df)\n",
-    "\n",
-    "trainingSummary = lr_model.summary\n",
-    "print(\"RMSE on training data: %f\" % trainingSummary.rootMeanSquaredError)\n",
-    "print(\"r2 on training data: %f\" % trainingSummary.r2)\n",
-    "y_pred = lr_model.transform(test_df)\n",
-    "y_pred.show(5)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "2bcc55d9",
-   "metadata": {},
-   "source": [
-    "### Model Evaluation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "continuing-george",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Root Mean Squared Error (RMSE) on test data = 2585.47\n",
-      "r2 on test data = 0.789558\n"
+      "r2 on test data = 0.791566\n"
      ]
     }
    ],
    "source": [
     "from pyspark.ml.evaluation import RegressionEvaluator\n",
-    "lr_evaluator = RegressionEvaluator(predictionCol=\"prediction\", \\\n",
-    "                 labelCol=\"Maximum Installs\",metricName=\"r2\")\n",
-    "        \n",
-    "test_result = lr_model.evaluate(test_df)\n",
-    "print(\"Root Mean Squared Error (RMSE) on test data = %g\" % test_result.rootMeanSquaredError)\n",
-    "print(\"r2 on test data = %g\" % lr_evaluator.evaluate(y_pred))"
+    "\n",
+    "lr = LinearRegression(featuresCol='Features',labelCol='Maximum Installs', )\n",
+    "lr_model = lr.fit(train_df)\n",
+    "lr_predictions = lr_model.transform(test_df)\n",
+    "lr_evaluator = RegressionEvaluator(\n",
+    "    labelCol=\"Maximum Installs\", predictionCol=\"prediction\", metricName=\"r2\")\n",
+    "r2 = lr_evaluator.evaluate(lr_predictions)\n",
+    "print(\"r2 on test data = %g\" % r2)"
    ]
   }
  ],
