--- a/DataAnalysis/Clustering/pyspark_K-mean.ipynb
+++ b/DataAnalysis/Clustering/pyspark_K-mean.ipynb
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -119,15 +119,7 @@
         "id": "7v8LHjpu1Yvh",
         "outputId": "06c37abb-39b2-4faf-d91e-d869f1f9df7a"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Spark Version: 3.4.0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "\n",
         "from pyspark.sql import SparkSession\n",
@@ -560,6 +552,21 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#plot resulting clusters\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "sns.set() #setting seaborn default for plots\n",
+        "%matplotlib inline\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "bPKOf5hY9wv5"
       },
@@ -580,7 +587,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.5"
     }
   },
   "nbformat": 4,
