--- a/DataPreprocessing/DataGeneration.ipynb
+++ b/DataPreprocessing/DataGeneration.ipynb
@@ -10,19 +10,7 @@
         "id": "YwdOt_0und5f",
         "outputId": "0755b9b1-84ce-4621-9345-d8b8a8698e6d"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: pyspark in /usr/local/lib/python3.10/dist-packages (3.4.0)\n",
-            "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n",
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: findspark in /usr/local/lib/python3.10/dist-packages (2.0.1)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# !pip install pyspark\n",
         "# !pip install findspark"
@@ -39,7 +27,7 @@
         "import pyspark\n",
         "from pyspark.sql import SparkSession\n",
         "from pyspark import SparkContext\n",
-        "from DataPreprocessing import process_data ,split_spark_df"
+        "from DataPreprocessing import process_data , delimiter_to_comma"
       ]
     },
     {
@@ -52,15 +40,7 @@
         "id": "jPjeM2HqntAW",
         "outputId": "48934890-ad72-4fd1-e2c9-0692939b6c11"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# from google.colab import drive\n",
         "# drive.mount('/content/drive')"
@@ -138,12 +118,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "DhwQdh0mVopd"
       },
       "source": [
-        "# Write processed data to csv for the next modules"
+        "# Generate a new csv"
       ]
     },
     {
@@ -155,6 +136,23 @@
       "outputs": [],
       "source": [
         "all_df.coalesce(1).write.format('com.databricks.spark.csv').save('Preprocessedata.csv',header = 'true')"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Generate new csv for RDDs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "delimiter_to_comma()"
       ]
     }
   ],
