Updated Rating classification

--- a/Models/Classification/RatingClassification.ipynb
+++ b/Models/Classification/RatingClassification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,20 +25,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dell\\AppData\\Local\\Temp/ipykernel_20220/3016429193.py:1: DtypeWarning: Columns (3,4,5,6,7,8,17,18,19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df= pd.read_csv('../Dataset/Preprocessed_data.csv', on_bad_lines='skip')\n"
+      "f:\\Fourth Year 2nd term\\Big Data\\XL-Data\\Models\\Classification\\utils.py:7: DtypeWarning: Columns (3,4,5,6,7,8,17,18,19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df= pd.read_csv('../../Dataset/Preprocessed_data.csv', on_bad_lines='skip')\n"
      ]
     }
    ],
    "source": [
     "df= read_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop App Name, App Id, Price, Size \n",
+    "df.drop(['App Name', 'App Id', 'Price', 'Size'], axis=1, inplace=True)"
    ]
   },
   {
@@ -51,30 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "X= df.drop('Rating', axis=1)\n",
     "y= df['Rating']\n",
-    "X_train, X_test, y_train, y_test= train_test_split(X, y, test_size=0.2, random_state=42)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Model initiation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf= svm.SVC()"
+    "X_train, X_test, y_train, y_test= train_test_split(X, y, test_size=0.2)"
    ]
   },
   {
@@ -87,16 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hyperparameters= { 'C': loguniform(1e-5, 1e5),\\\n",
-    "                  'gamma':  np.linspace(0.0001, 1),\\\n",
-    "                  'kernel': ['linear' , 'rbf' ,'poly','sigmoid'] }\n",
+    "# hyperparameters= { 'C': loguniform(10e-1, 1e4),\\\n",
+    "#                   'kernel': ['linear' ] }\n",
+    "#                 #   'gamma':  np.linspace(0.0001, 1),\\\n",
     "\n",
-    "optimal_hyperparameters= hyperparameter_search(hyperparameters, clf, X_train, y_train)\n",
-    "print(optimal_hyperparameters)"
+    "# optimal_hyperparameters= hyperparameter_search(hyperparameters, svm.SVC(), X_train, y_train)\n",
+    "# print(optimal_hyperparameters)"
    ]
   },
   {
@@ -109,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,16 +111,16 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.77      0.93      0.84      3580\n",
-      "           1       0.00      0.00      0.00        48\n",
-      "           2       0.00      0.00      0.00       186\n",
-      "           3       0.42      0.03      0.06       708\n",
-      "           4       0.52      0.66      0.58      1708\n",
-      "           5       0.00      0.00      0.00       323\n",
+      "           0       0.77      0.93      0.84      3592\n",
+      "           1       0.00      0.00      0.00        41\n",
+      "           2       0.00      0.00      0.00       174\n",
+      "           3       0.39      0.03      0.05       710\n",
+      "           4       0.52      0.67      0.58      1704\n",
+      "           5       0.00      0.00      0.00       332\n",
       "\n",
-      "    accuracy                           0.68      6553\n",
-      "   macro avg       0.29      0.27      0.25      6553\n",
-      "weighted avg       0.60      0.68      0.62      6553\n",
+      "    accuracy                           0.69      6553\n",
+      "   macro avg       0.28      0.27      0.25      6553\n",
+      "weighted avg       0.60      0.69      0.62      6553\n",
       "\n"
      ]
     },
