Adding hyperparameters to the classifier

--- a/Models/Classification/RatingClassification.ipynb
+++ b/Models/Classification/RatingClassification.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -111,34 +111,22 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.77      0.93      0.84      3592\n",
+      "           0       0.98      0.96      0.97      3592\n",
       "           1       0.00      0.00      0.00        41\n",
-      "           2       0.00      0.00      0.00       174\n",
-      "           3       0.39      0.03      0.05       710\n",
-      "           4       0.52      0.67      0.58      1704\n",
-      "           5       0.00      0.00      0.00       332\n",
+      "           2       0.07      0.05      0.06       174\n",
+      "           3       0.24      0.18      0.21       710\n",
+      "           4       0.55      0.66      0.60      1704\n",
+      "           5       0.39      0.38      0.38       332\n",
       "\n",
-      "    accuracy                           0.69      6553\n",
-      "   macro avg       0.28      0.27      0.25      6553\n",
-      "weighted avg       0.60      0.69      0.62      6553\n",
+      "    accuracy                           0.74      6553\n",
+      "   macro avg       0.37      0.37      0.37      6553\n",
+      "weighted avg       0.73      0.74      0.73      6553\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Dell\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "c:\\Users\\Dell\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "c:\\Users\\Dell\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
    "source": [
-    "clf= svm.SVC()\n",
+    "clf= svm.SVC(kernel='rbf',gamma=0.3, C=100)\n",
     "clf.fit(X_train, y_train)\n",
     "y_pred= clf.predict(X_test)\n",
     "print(classification_report(y_test, y_pred))"
