Avg App size per category

--- a/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
+++ b/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
@@ -78,26 +78,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# compute ecludian distance between x and each cetroid in centroids and return centroid with min distance\n",
-    "def compute_closest_centroid(x,centroids):\n",
-    "    distances = [ np.sqrt(np.sum((float(x) - centroid)**2)) for centroid in centroids]\n",
-    "    return np.argmin(distances)\n",
-    "\n",
-    "centroids=[2, 4, 5, 4.5,0]\n",
-    "\n",
-    "map_result= rdd.map(lambda x: x.split(',')[3])\\\n",
-    "            .map(lambda x: (compute_closest_centroid(x,centroids), x))\n",
-    "\n",
-    "map_result.take(15)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -114,18 +94,8 @@
     "#Price=9\n",
     "#Currency=10\n",
     "#Size=11\n",
-    "#Minimum Android=12\n",
     "#Developer Id=13\n",
-    "#Developer Website=14\n",
-    "#Developer Email=15\n",
-    "#Released=16\n",
-    "#Last Updated=17\n",
-    "#Content Rating=18\n",
-    "#Privacy Policy=19\n",
-    "#Ad Supported=20\n",
-    "#In App Purchases=21\n",
-    "#Editors Choice=22\n",
-    "#Scraped Time=23"
+    "#Content Rating=18"
    ]
   },
   {
@@ -145,8 +115,8 @@
     "9. How can people's categories (Everyone/Teen/Adults) affect rating and #installs?\n",
     "10. Paid Apps based on max rating and Installs\n",
     "11. Free Apps based on max rating and Installs\n",
-    "12. Avg Installations/ Free-Paid Apps (incomplete)\n",
-    "13. Average app size for each category (incomplete)"
+    "12. Avg Installations/ Free-Paid Apps \n",
+    "13. Average app size for each category "
    ]
   },
   {
@@ -359,30 +329,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Average app size for each category"
+    "# Average app size(in MB) for each category"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Photography', 17.2), ('Auto & Vehicles', 17.92)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# # size= 11, category= 2\n",
-    "# def convert_to_bytes(size_str):\n",
-    "#     suffixes = {'G': 1000000000, 'M': 1000000, 'k': 1000}\n",
-    "#     for suffix, multiplier in suffixes.items():\n",
-    "#         if suffix in size_str:\n",
-    "#             return float(size_str[:-1]) * multiplier\n",
-    "#     return float(size_str)\n",
+    "# size= 11, category= 2\n",
+    "def convert_to_bytes(size_str):\n",
+    "    suffixes = {'G': 1000000000, 'M': 1000000, 'k': 1000}\n",
+    "    try:\n",
+    "        for suffix, multiplier in suffixes.items():\n",
+    "            if suffix in size_str:\n",
+    "                return float(size_str[:-1]) * multiplier\n",
+    "    except:\n",
+    "        return 0.0\n",
     "\n",
-    "# size_rdd = rdd.filter(lambda x: x.split(',')[11]!='Varies with device' and x.split(',')[11]!='') \\\n",
-    "#             .map(lambda x: (x.split(',')[2], convert_to_bytes(x.split(',')[11]))) \\\n",
-    "#             .mapValues(lambda x: (x,1)) \\\n",
-    "#             # .reduceByKey(lambda x,y: (x[0]+y[0], x[1]+y[1])) \\\n",
-    "#             # .mapValues(lambda x: x[0]/x[1])\n",
+    "size_rdd = rdd.filter(lambda x: x.split(',')[11]!='Varies with device' and x.split(',')[11]!='') \\\n",
+    "            .map(lambda x: (x.split(',')[2], convert_to_bytes(x.split(',')[11]))) \\\n",
+    "            .mapValues(lambda x: (x,1)) \\\n",
+    "            .reduceByKey(lambda x,y: (x[0]+y[0], x[1]+y[1])) \\\n",
+    "            .mapValues(lambda x: x[0]/x[1]).mapValues(lambda x: round(x/1000000,2))\n",
     "\n",
-    "# size_rdd.take(50)"
+    "size_rdd.take(2)"
    ]
   },
   {
