--- a/DataAnalysis/Clustering/RDD_Clustering.ipynb
+++ b/DataAnalysis/Clustering/RDD_Clustering.ipynb
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,7 +65,7 @@
               "['Gakondo,com.ishakwe.gakondo,Adventure,0.0,0.0,10+,10,15,True,0.0,USD,10M,7.1 and up,Jean Confident Irénée NIYIZIBYOSE,https://beniyizibyose.tk/#/,jean21101999@gmail.com,Feb 26  2020,Feb 26  2020,Everyone,https://beniyizibyose.tk/projects/,False,False,False,2021-06-15 20:19:35']"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "mVbxuGs_inCb"
       },
@@ -118,12 +118,12 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline \n",
-        "from sklearn.cluster import KMeans\n"
+        "from sklearn.cluster import KMeans"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 7,
       "metadata": {
         "id": "Sg_V6dv_-wxS"
       },
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -224,7 +224,7 @@
               "'\\nmap => compute distance between each point and the centroids \\nproduce  key- value pair <index of mean with min- distance, value of the features>\\nreduce => compute the new means for each cluster\\n\\n'"
             ]
           },
-          "execution_count": 88,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -240,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -253,7 +253,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\Dell\\AppData\\Local\\Temp/ipykernel_16364/386198608.py:17: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+            "C:\\Users\\Dell\\AppData\\Local\\Temp/ipykernel_21380/1718551015.py:17: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
             "  new_centroids= [item[1] for item in np.array(final_result.collect())]\n"
           ]
         },
@@ -288,41 +288,49 @@
         "            .mapValues(lambda x: (x[0],x[1],x[2],1,1,1))\\\n",
         "            .reduceByKey(lambda x,y: (x[0]+y[0],x[1]+y[1],x[2]+y[2],x[3]+1,x[4]+1,x[5]+1))\\\n",
         "            .mapValues(lambda x: (x[0]/x[3],x[1]/x[4],x[2]/x[5]))\n",
-        "                \n",
+        "            \n",
         "    new_centroids= [item[1] for item in np.array(final_result.collect())]\n",
         "    print(\"New: \",new_centroids)\n",
         "    print(\"Old: \", centroids)\n",
         "    if centroids != new_centroids :\n",
         "        centroids = new_centroids\n",
         "    else:\n",
-        "        break\n"
+        "        break"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 20,
       "metadata": {
         "id": "NskXUo01eTSN"
       },
       "outputs": [],
       "source": [
-        "clusters= final_result.groupByKey().mapValues(list)"
+        "clusters= final_result.mapValues(lambda x: (round(x[0],2),int(x[1]),round(x[2]/1000000,2)))\\\n",
+        "                    .groupByKey().mapValues(list)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
-      "metadata": {
-        "id": "Z3FEGFwhmc9b"
-      },
-      "outputs": [],
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[(0, [(43.77720368826996, 3877312.3117198492, 384907471.4060414)])]\n"
+          ]
+        }
+      ],
       "source": [
-        "collected_clusters=clusters.collect()"
+        "collected_clusters=clusters.collect()\n",
+        "print(collected_clusters)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -330,22 +338,14 @@
         "id": "9hDGwAbUnZo3",
         "outputId": "e3b61c0a-9dfe-4595-b9a4-899c55122281"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "(0, [(43.77720368826996, 3877312.3117198492, 384907471.4060414)])\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "print(collected_clusters[0])"
+        "collected_clusters = np.array(collected_clusters)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -358,7 +358,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[(43.77720368826996, 3877312.3117198492, 384907471.4060414)]\n"
+            "[(43.78, 3877312, 384.91)]\n"
           ]
         }
       ],
@@ -369,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 15,
       "metadata": {
         "id": "Ig91P7NXofCd"
       },
@@ -382,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -395,7 +395,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[43.77720368826996]\n"
+            "[43.78]\n"
           ]
         }
       ],
@@ -405,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -414,7 +414,19 @@
         "id": "iEwg43jTpwAj",
         "outputId": "e41fcced-ae32-41bf-95dc-b4dd2463f43a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "IndexError",
+          "evalue": "list index out of range",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21380/461849643.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# plt.scatter(actual_clusters[0], actual_clusters[0], color='red')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mactual_clusters\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'blue'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mactual_clusters\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'red'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mactual_clusters\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'green'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mactual_clusters\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'yellow'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+          ]
+        }
+      ],
       "source": [
         "# plt.scatter(actual_clusters[0], actual_clusters[0], color='red')\n",
         "plt.plot(actual_clusters[1], color='blue')\n",
@@ -425,6 +437,13 @@
         "\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
